# Winafi

./: CMakeLists.txt  README.md
.github/workflows/: build-appimage.yml  build-arch.yml  build-deb.yml  build-flatpak.yml  build-rpm.yml  build-snap.yml  ci-distros.yml  ci.yml  release.yml
aur/: PKGBUILD
flatpak/: com.github.alphaglider25.winafi.yml
include/: winafi.h
scripts/: build-appimage.sh  build-deb.sh  build-portable.sh  build-rpm.sh
snap/: snapcraft.yaml
src/: CMakeLists.txt
src/gui/: MainWindow.cpp  MainWindow.h  UdevMonitor.cpp  UdevMonitor.h
src/gui/sections/: SourceSection.cpp  WindowsCustomizeSection.cpp  WindowsCustomizeSection.h
src/platform/linux/: assets.c  device.c  device.h  device_validate.c  device_validate.h  iso_extract.c  iso_extract.h  linux_boot.c  linux_boot.h  mount_ops.c  mount_ops.h  partition.c  session.c  session.h  smart.c  smart.h  update.c  update.h  windows_boot.c  windows_boot.h  wue.c  wue.h
tests/unit/: test_assets.c  test_customize_section.cpp  test_dark_mode.cpp  test_localization_linux.c  test_net.c  test_pe.c  test_proc_utils.c  test_sbat.c  test_settings.c  test_smart.c  test_theme.cpp  test_update.c  test_wimboot.c  test_wue.c
